# discordfix_autoupdate

./: Cargo.toml  README.md  build.rs
src/: main.rs
