[package]
name = "discordfix_autoupdate"
description = "Утилита для авто-обновления сборки DiscordFix"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Abraham Tugalov <priler96@gmail.com>"]

[package.metadata.winresource]
LegalCopyright = "2024 by Priler"
OriginalFilename = "discordfix_autoupdate.exe"

[dependencies]
winresource = "0.1.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
semver = "1.0"
colored = "2.0"
indicatif = "0.17"
futures-util = "0.3"
bytes = "1.8.0"

[build-dependencies]
winresource = "0.1.17"
